tests/NormalTests/paczka1/fuzzy1/72096946.err
Error in line 4: IxglEAg S625 61,0
Error in line 8: YDbJ8TBOfIA A864 80,2
Error in line 14: GPQy2xaU A694 43,7
Error in line 26: b6vP4i 694 84,6
Error in line 25: Mct S625 32,1
Error in line 28: Mct A694 69,6
Error in line 24: A864 S504 97,4
Error in line 36: b6vP4i A694 2,0
